# papersearcher

./: README.md
backend/: .env  app.py  keep_alive.py  pyproject.toml  requirements.txt
backend/flaskystuff/: __init__.py  db.py
backend/pastpaperapi/: __init__.py  db.py  sort.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  routers.js
frontend/src/components/: Home.vue  NavBar.vue  SearchBar.vue
